put first scss as comment and make new scss

--- a/kris.html
+++ b/kris.html
@@ -9,18 +9,22 @@
     <title>Project Eden</title>
   </head>
   <body>
-      <div class="main-pic">
+  <section class="main-pic-kris">
           <!-- enter navbar -->
           <!--  -->
-    <h1>Our energy</h1>
-        <div class="input">
-            <div class="chart">                         
-            <img id="img" src="images/pic001.jpg" alt="chart">
-                <p class="chart-text">Imagine homes whose very building material is salted with dormant limestone-producing bacteria, which awaken upon contact with moisture and repair any cracks or structural damage.
+      <section class="header-kris">
+        <!-- <img src="images/turbine.jpg" alt=""> -->
+        <h1>Our energy</h1>
+      </section>
+    <div class="input">
+      <div class="chart">                         
+            <!-- <img id="img" src="images/pic001.jpg" alt="chart"> -->
+      </div> 
+        <p class="chart-text">Imagine homes whose very building material is salted with dormant limestone-producing bacteria, which awaken upon contact with moisture and repair any cracks or structural damage.
                 There will be “digestion tanks” full of anaerobic bacteria, to dispose of our waste; and our homes will produce, store, and reuse their own energy, using “microbial fuel cell stacks” and more efficient solar panels to generate electricity, and power-banks like the Tesla powerwall to store it against future use.  Personal homes will be almost fully independent of a dangerously overtaxed energy grid.</p>
-                </p>                        
-            </div>  
-        </div>
-    </div>      
+        </p>                        
+            
+    </div>
+  </section>      
   </body>
 </html>
