container and bg pic for parallax

--- a/kris.html
+++ b/kris.html
@@ -10,10 +10,6 @@
   </head>
   <body>
     <section id="main-pic">
-      <h2 class="header-kris">
-        Energy
-      </h2>
-      <!-- <hr class="line-kris"> -->
     </section>
     <div class="kris-container">
         <div class="kris-box1">
@@ -26,6 +22,15 @@
         <img class="krisbox2" src="images/pic001.jpg" alt="">
         </div>
         <h2 class="kris-title">Energy</h2>
+  <div class="container-kris">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quas laborum odio recusandae enim nam culpa. Nesciunt mollitia cupiditate at tenetur obcaecati nobis magni minus corporis sequi tempore architecto unde, dolor, labore numquam eligendi nam ab odio. Officiis, laborum architecto nemo repellat doloribus hic voluptas quibusdam sed provident doloremque quod?</p>
+    <div class="parallax-kris">
+      <!-- <img src="/images/solar.jpg" alt="" class="par-kris"> -->
+    </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias provident, illum libero quia similique architecto inventore voluptatum odio non quod rerum beatae. Maiores neque explicabo corporis, autem molestiae cumque assumenda distinctio, ab officiis hic iste molestias dolorum. Libero asperiores rem molestias sint. Quas labore ducimus explicabo. Architecto cum excepturi cupiditate?
+      </p>
+  </div>
+
 
 
 
