add active link to github page

--- a/kris.html
+++ b/kris.html
@@ -18,7 +18,7 @@
 
     <div class="kris-container">
       <div class="kris-box1">
-        <p>
+        <p>We aim to be 100% self-sufficient when it comes to energy.
           Imagine homes whose very building material is salted with dormant
           limestone-producing bacteria, which awaken upon contact with moisture
           and repair any cracks or structural damage. There will be “digestion
